Fix Overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,17 +3,18 @@
 * {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+    box-sizing: border-box;
 }
 
 body {
     font-family: "Prompt", sans-serif;
     background-color: #0F1624;
+    width: 100%;
+    height: 100%;
 }
 
 html {
     scroll-behavior: smooth;
-    
 }
 
 header {
